# xiaobaozi

./: .gitignore  app.py  bible.py  pyproject.toml
xiaobaozi_discord/: bible.py  main.py  readme.md  util.py
