[tool.poetry]
name = "xiaobaozi"
version = "0.1.0"
description = ""
authors = ["ke"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
requests = "^2.25.1"
apscheduler = "^3.6.3"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
